--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
