--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "backend of the arcadia",
   "main": "app.js",
   "scripts": {
-     "start": "node server.js",
-      "dev": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -19,7 +19,9 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "node.js": "^0.0.1-security",
-    "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
